<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_user"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/ic_menu_event"
            android:title="@string/events" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_menu_favorites"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_inbox"
            app:actionLayout="@layout/notification_counter_icon"
            android:icon="@drawable/ic_menu_inbox"
            android:title="@string/menu_inbox"/>

    </group>
</menu>