<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="@color/basicAppColor">

    <TextView
        android:id="@+id/confirmTitle"
        android:text="@string/confirm_delete"
        android:textSize="24sp"
        android:textColor="@android:color/holo_orange_light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="15dp" />

    <TableRow
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirmTitle"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/confirmNoBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm_no"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_red_dark"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/confirmYesBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_margin="15dp"
            android:layout_height="wrap_content"
            android:text="@string/confirm_yes"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:background="@android:color/holo_green_dark"
            style="?android:attr/buttonBarButtonStyle" />
    </TableRow>
</RelativeLayout>