<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity"
    android:background="@color/lightGray">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/basicAppColor">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/basicAppColor"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <!--setting bottom border for the action bar-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/action_bar_border"/>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/previewTextView"
            android:text="@string/preview"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@android:color/holo_green_dark"
            android:gravity="center"
            android:layout_marginStart="@dimen/custom_dimen"
            android:layout_marginEnd="@dimen/custom_dimen"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="150dp" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginTop="8sp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/task_5add_school_sidebar"/>
        <Button
            android:id="@+id/previewBtn"
            android:text="@string/events"
            android:textSize="20sp"
            android:layout_marginTop="8sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonTintMode"/>

    </LinearLayout>
    <include layout="@layout/content_main" />

</android.support.design.widget.CoordinatorLayout>