<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/lightGray">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/title"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_below="@id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="24sp"/>

            <TableRow
                android:id="@+id/tableBtn"
                android:layout_below="@id/descriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="8dp"
                app:layout_constraintTop_toBottomOf="@+id/descriptionTextView"
                style="?android:attr/buttonBarStyle">

                <Button
                    android:id="@+id/starredEventBtn"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="bottom"
                    android:background="@android:drawable/btn_star_big_off"
                    style="?android:attr/buttonBarButtonStyle"/>

                <Button
                    android:id="@+id/deleteButton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="bottom"
                    android:background="@android:drawable/ic_menu_delete"
                    android:backgroundTint="@color/basicAppColor"
                    android:shadowColor="@android:color/holo_orange_light"
                    style="?android:attr/buttonBarButtonStyle"/>
            </TableRow>

            <TextView
                android:id="@+id/addedDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/added_date"
                android:textSize="24sp"
                android:layout_alignBottom="@id/tableBtn"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>