<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:layout_centerInParent="true"
    android:background="@color/basicAppColor"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/navigateBack"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:src="@drawable/ic_menu_back" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_centerInParent="true"
        android:layout_toEndOf="@id/navigateBack"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/userImageView"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/nav_header_desc"
            app:srcCompat="@drawable/ic_menu_user" />

        <TextView
            android:id="@+id/userNameID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/user_name"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/testNotExistMsg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-22dp"
            android:layout_toEndOf="@id/userImageView"
            android:layout_alignBottom="@id/userImageView"
            android:layout_centerInParent="true"
            android:gravity="bottom"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/firstIncomingMessageNotifier"
                android:layout_width="45dp"
                android:layout_height="40dp">

                <ImageView
                    android:id="@+id/firstSenderUserIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="bottom"
                    android:contentDescription="@string/menu_inbox"
                    android:src="@drawable/ic_menu_user" />

                <TextView
                    android:id="@+id/firstNotifyBadge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/firstSenderUserIcon"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:background="@android:drawable/ic_notification_overlay"
                    android:backgroundTint="@android:color/holo_orange_light"
                    android:text="12"
                    android:textSize="10sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/secondIncomingMessageNotifier"
                android:layout_width="45dp"
                android:layout_height="40dp"
                android:layout_gravity="start">

                <ImageView
                    android:id="@+id/secondSenderUserIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentStart="true"
                    android:layout_gravity="bottom"
                    android:contentDescription="@string/menu_inbox"
                    android:src="@drawable/ic_menu_user" />

                <TextView
                    android:id="@+id/secondNotifyBadge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/secondSenderUserIcon"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:background="@android:drawable/ic_notification_overlay"
                    android:backgroundTint="@android:color/holo_orange_light"
                    android:text="12"
                    android:textSize="10sp" />
            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>

    <!--setting border for the header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/action_bar_border"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</RelativeLayout>